GitOps/clusters/cyberhawk-talos-k8s/4-media/qbittorrent/30-unpackerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unpackerr
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unpackerr
  template:
    metadata:
      labels:
        app: unpackerr
    spec:
      nodeSelector:
        topology.cyberhawk.no/storage: files-nfs
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: unpackerr
          image: ghcr.io/unpackerr/unpackerr:0.14.5
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
          volumeMounts:
            - name: files
              mountPath: /files
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: files
