GitOps/clusters/cyberhawk-talos-k8s/4-media/qbittorrent/21-qbittorrent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: http
