GitOps/clusters/cyberhawk-talos-k8s/4-media/qbittorrent/22-qbittorrent-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - qbittorrent.cyberhawk.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent
          port: 8080
